# NIDS

./: 345.docx  CS.ipynb  README.md  app.py  first.py  pyproject.toml  requirements.txt
